--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Scorix's Github Page
 ---
 
-<div id="home">
+<div class="container">
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
