--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Scorix's Blog
 
 
 {% for post in paginator.posts %}
-    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    <p class="author"><span class="date">{{ post.date }}</span></p>
+    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    <span class="date">{{ post.date | date_to_string }}</span>
 {% endfor %}
 
 
