--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Scorix's Blog
     <ul class="pages">
         <li class="page">
             {% if paginator.page == 1 %}
-            <span class="current-page">1</span>
+            <span class="current">1</span>
             {% else %}
             <a href="/">1</a>
             {% endif %}
@@ -37,7 +37,7 @@ title: Scorix's Blog
         {% for count in (2..paginator.total_pages) %}
         <li class="page">
             {% if count == paginator.page %}
-            <span class="current-page">{{ count }}</span>
+            <span class="current">{{ count }}</span>
             {% else %}
             <a href="/page{{ count }}">{{ count }}</a>
             {% endif %}
