--- a/index.html
+++ b/index.html
@@ -11,48 +11,39 @@ title: Scorix's Blog
 
 
 <div id="post-pagination" class="pagination">
-    {% if paginator.previous_page %}
-    <p class="previous">
-        {% if paginator.previous_page == 1 %}
-        <a href="/">Previous</a>
-        {% else %}
-        <a href="{{ paginator.previous_page_path }}">Previous</a>
-        {% endif %}
-    </p>
-    {% else %}
-    <p class="previous disabled">
-        <span>Previous</span>
-    </p>
-    {% endif %}
-
     <ul class="pages">
-        <li class="page">
-            {% if paginator.page == 1 %}
-            <span class="current">1</span>
-            {% else %}
-            <a href="/">1</a>
-            {% endif %}
-        </li>
+        {% if paginator.previous_page %}
+            <li class="previous">
+                {% if paginator.previous_page == 1 %}
+                    <a href="/">Previous</a>
+                {% else %}
+                    <a href="{{ paginator.previous_page_path }}">Previous</a>
+                {% endif %}
+            </li>
+        {% else %}
+            <li class="previous disabled">Previous</li>
+        {% endif %}
+
+        {% if paginator.page == 1 %}
+            <li class="current">1</li>
+        {% else %}
+            <li><a href="/">1</a></li>
+        {% endif %}
 
         {% for count in (2..paginator.total_pages) %}
-        <li class="page">
             {% if count == paginator.page %}
-            <span class="current">{{ count }}</span>
+                <li class="current">{{ count }}</li>
             {% else %}
-            <a href="/page{{ count }}">{{ count }}</a>
+                <li><a href="/page{{ count }}">{{ count }}</a></li>
             {% endif %}
-        </li>
         {% endfor %}
+
+        {% if paginator.next_page %}
+            <li class="next">
+                <a href="{{ paginator.next_page_path }}">Next</a>
+            </li>
+        {% else %}
+            <li class="next disabled">Next</li>
+        {% endif %}
     </ul>
-
-    {% if paginator.next_page %}
-    <p class="next">
-        <a href="{{ paginator.next_page_path }}">Next</a>
-    </p>
-    {% else %}
-    <p class="next disabled">
-        <span>Next</span>
-    </p>
-    {% endif %}
-
 </div>
