add stylesheet of pagination

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ title: Scorix's Blog
 {% endfor %}
 
 
-<div id="post-pagination" class="pagination">
-    <ul class="pages">
+<div class="pagination">
+    <ul class="pagination">
         {% if paginator.previous_page %}
             <li class="previous">
                 {% if paginator.previous_page == 1 %}
