--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: default
 title: Scorix's Blog
 ---
 
-
 {% for post in paginator.posts %}
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
     <span class="date">{{ post.date | date_to_string }}</span>
@@ -39,9 +38,7 @@ title: Scorix's Blog
         {% endfor %}
 
         {% if paginator.next_page %}
-            <li class="next">
-                <a href="{{ paginator.next_page_path }}">Next</a>
-            </li>
+            <li class="next"><a href="{{ paginator.next_page_path }}">Next</a></li>
         {% else %}
             <li class="next disabled">Next</li>
         {% endif %}
