--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ title: Scorix's Blog
                 {% endif %}
             </li>
         {% else %}
-            <li class="previous disabled">Previous</li>
+            <li class="previous disabled"><a href="#">Previous</a></li>
         {% endif %}
 
         {% if paginator.page == 1 %}
-            <li class="current">1</li>
+            <li class="current"><a href="#">1</a></li>
         {% else %}
             <li><a href="/">1</a></li>
         {% endif %}
