--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Scorix's Blog
         {% if paginator.next_page %}
             <li class="next"><a href="{{ paginator.next_page_path }}">Next</a></li>
         {% else %}
-            <li class="next disabled">Next</li>
+            <li class="next disabled"><a href="#">Next</a></li>
         {% endif %}
     </ul>
 </div>
