--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ title: Scorix's Blog
                 {% endif %}
             </li>
         {% else %}
-            <li class="previous disabled"><a href="#">Previous</a></li>
+            <li class="previous disabled">Previous</li>
         {% endif %}
 
         {% if paginator.page == 1 %}
-            <li class="current"><a href="#">1</a></li>
+            <li class="current">1</li>
         {% else %}
             <li><a href="/">1</a></li>
         {% endif %}
@@ -39,7 +39,7 @@ title: Scorix's Blog
         {% if paginator.next_page %}
             <li class="next"><a href="{{ paginator.next_page_path }}">Next</a></li>
         {% else %}
-            <li class="next disabled"><a href="#">Next</a></li>
+            <li class="next disabled">Next</li>
         {% endif %}
     </ul>
 </div>
