edit my contact

--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@ title: About Me
 ---
 
 <header class="page-header">
-    <h1>Yu Zhang</h1>
+    <h1>Scorix</h1>
+    <aside>contact me: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></aside>
 </header>
 
